------------------------------------------------------------------------
r1569 | gaser | 2020-02-24 14:24:12

Changed paths:
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat_main_gintnorm.m
M       cat_run.m
M       cat_vol_groupwise_ls.m
M       html/cat.html
 M      html/cat_licences.html
 M      html/cat_references.html
M       html/cat_statistics.html

(1) Changed: Disabled send of piwik information about number of processed files.
(2) Changed: Added call to old spm_diffeo function for fmg if the new functions
    ends up in NaNs in cat_vol_groupwise_ls.m.
(3) Changed: Updated parameters for MT contrasts with strong background noise.
------------------------------------------------------------------------
r1568 | gaser | 2020-02-14 15:37:03 +0100 (Fr, 14 Feb 2020) | 10 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_ROI.m
M       cat_run.m
M       html/cat.html

Fixed: Writing of surface ROIs were not recognized in cat_run.m for default
user mode.

------------------------------------------------------------------------
r1567 | gaser | 2020-02-14 13:49:49 +0100 (Fr, 14 Feb 2020) | 14 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       html/cat.html
M       html/cat.txt
M       html/cat_acknowledgement.html
A       html/cat_licences.html
A       html/cat_references.html
D       use_of_external_software.txt

(1) Changed: Added license information about used software and atlases.
(2) Changed: Added site with references for citation.


------------------------------------------------------------------------
r1566 | gaser | 2020-02-13 11:25:08 +0100 (Do, 13 Feb 2020) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_vol2surf.m

Fixed: If only one step is defined for volume mapping force use of "max" as 
sampling function.

------------------------------------------------------------------------
r1565 | gaser | 2020-02-13 10:58:08 +0100 (Do, 13 Feb 2020) | 16 lines

Changed paths: