@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1569 | gaser | 2020-02-24 14:24:12
+r1570 | gaser | 2020-02-24 15:08:22
+
+Changed paths:
+M       CHANGES.txt
+M       cat_vol_groupwise_ls.m
+
+Changed all calls in cat_vol_groupwise_ls.m to old spm_diffeo function because 
+for many data the Hessian matrix could not be estimated.
+
+------------------------------------------------------------------------
+r1569 | gaser | 2020-02-24 14:24:47 +0100 (Mo, 24 Feb 2020) | 17 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -17,6 +27,7 @@ M       html/cat_statistics.html
 (2) Changed: Added call to old spm_diffeo function for fmg if the new functions
     ends up in NaNs in cat_vol_groupwise_ls.m.
 (3) Changed: Updated parameters for MT contrasts with strong background noise.
+
 ------------------------------------------------------------------------
 r1568 | gaser | 2020-02-14 15:37:03 +0100 (Fr, 14 Feb 2020) | 10 lines
 
